style.css
/* General */

:root {
  --main_color: #c09fe0;
  --font: "Heebo", sans-serif;
}
* {
  margin: 0;
  scroll-behavior: smooth;
}

body {
  background-color: black;
}

.scroll_line {
  width: 3px;
  background-color: var(--main_color);
  height: 70px;
  position: absolute;
  bottom: -35px;
  left: 50vw;
}

/* Nav */
nav {
  position: absolute;
  top: 0;
  left: 0;
  width: 99vw;
}

nav ul {
  display: flex;
  justify-content: space-between;
  padding: 5px 10px;
}
nav li {
  font-family: var(--font);
  font-weight: 100;
  color: var(--main_color);
  font-size: 1.5rem;
  list-style-type: none;
}

nav a {
  color: var(--main_color);
  text-decoration: none;
  transform: translateY(-50px);
  display: inline-block;
  opacity: 0;

  transition: 0.3s;
  background: linear-gradient(var(--main_color), var(--main_color)) bottom / 0 1px no-repeat;
  transition: 0.5s background-size;
  background-position: left bottom;
}

nav a:after {
  color: var(--main_color);
  text-decoration: none;
}

nav a:hover {
  color: white;
  transition: 0.3s;
  background-size: 100% 1px;
}

/* Splash */

#splash {
  height: 100vh;
}

h1 {
  font-family: var(--font);
  font-weight: 700;
  color: var(--main_color);
  text-transform: uppercase;
  font-size: 2.7rem;
  position: absolute;
  bottom: 100px;
  left: 10px;
  opacity: 0;
  transform: translateY(200px);
}

/* About */

#about {
  height: 100vh;
  position: relative;
}

.about_container_to_animate {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  opacity: 0;
  transform: translateY(300px);
}
.me_img_container {
  width: 200px;
  height: 200px;
  border-radius: 100%;
  background-image: url(img/mememe_purplebackground.png);
  background-position: center;
  background-size: cover;
  margin: 0 auto;
}

h2 {
  font-family: var(--font);
  color: var(--main_color);
  font-size: 2.7rem;
  text-transform: uppercase;
  margin: 30px 10px 0;
}

p {
  font-family: var(--font);
  font-weight: 100;
  color: white;
  width: 350px;
  margin: 0 10px;
}

h3 {
  font-family: var(--font);
  color: var(--main_color);
  margin: 15px 10px 0;
  font-size: 1.5rem;
}

/* Work */

#work {
  position: relative;
  padding: 30px 0;
}

img {
  width: 150px;
  height: 150px;
  object-fit: cover;
}

h4 {
  font-family: var(--font);
  color: white;
  margin: -5px 0 0 20px;
  font-size: 1.5rem;
}

figure {
  display: flex;
  width: 94vw;
  margin: 70px 10px;
  opacity: 0;
}

figcaption p {
  width: auto;
  padding: 0 20px;
  margin: 0;
}

#work button {
  width: 150px;
  height: 40px;
  border-radius: 30px;
  background-color: transparent;
  border: 2px solid var(--main_color);
  color: white;
  cursor: pointer;
  transition: 0.3s;
  margin: 15px 20px;
  font-family: var(--font);
  font-weight: 800;
  font-size: 1rem;
}

#work button:hover {
  background-color: var(--main_color);
  transition: 0.3s;
}

/* Contact */

#contact {
  padding: 30px 0;
  height: 90vh;
}

.logo_container {
  display: flex;
  align-items: center;
  justify-content: center;
  max-width: 375px;
}

.logo_container button {
  border: none;
  background-color: transparent;
  color: transparent;
  cursor: pointer;
  margin: 50px 20px;
  transition: 0.3s;
}
#contact p a {
  color: white;
  text-decoration: none;
  margin: 0;
  background: linear-gradient(var(--main_color), var(--main_color)) bottom / 0 2px no-repeat;
  background-position: left bottom;
}

#contact p a:hover {
  color: var(--main_color);
}

/* Mediaqueries */

@media (min-width: 600px) {
  /* Nav */
  nav li {
    font-size: 2rem;
    padding: 5px 30px;
  }

  /* Splash */
  h1 {
    font-size: 5rem;
    max-width: 700px;
    left: 30px;
  }

  /* About */
  .about_container_to_animate {
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
  }

  .me_img_container {
    width: 200px;
    height: 200px;
  }

  #about .textwrapper {
    width: 50vw;
  }

  h2 {
    margin: 50px 30px 0;
    font-size: 4rem;
  }

  p {
    margin: 0 30px;
    font-size: 1rem;
    width: 40vw;
  }

  /* Work */

  figure {
    margin: 70px 30px;
  }
}

@media (min-width: 918px) {
  /* About */

  .me_img_container {
    width: 400px;
    height: 400px;
  }

  h2 {
    font-size: 5rem;
  }

  p {
    font-size: 1.5rem;
  }

  /* Work */

  figure {
    max-width: 900px;
    margin: 70px auto;
  }
  figcaption p {
    padding: 0 40px;
  }
  h4 {
    font-size: 2rem;
    margin: -5px 0 0 40px;
  }

  img {
    width: 300px;
    height: 300px;
  }

  #work button {
    margin: 15px 40px;
  }
}

